--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,14 @@ html, body{
     width: 100%;
     height: 100%;
 }
-body{
-    background: url("../img/bg.jpg") no-repeat top left;
+html{
+    background: url("../img/bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
+}
+body{
     overflow-x: hidden;
     font-family: Quicksand, sans-serif;
 
